tests/invalid/loops/skip_not_in_loop.rs
/*
fail: 1
*/

main(): i32 {
    skip;
}